--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
