--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "axios": "^1.7.2",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
@@ -20,6 +21,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-heroicons": "^4.0.0",
     "react-native-safe-area-context": "4.10.1",
